force-app/main/default/objects/Forrester_Sponsor__x/Forrester_Sponsor__x.object-meta.xml
<CustomObject>
    <description>Forrester_Sponsor</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_Sponsor</externalName>
    <label>Forrester_Sponsor</label>
    <pluralLabel>Forrester_Sponsor</pluralLabel>
</CustomObject>