force-app/main/default/objects/Forrester_Sponsor__x/fields/ADMINISTERING_ACTIVITY__c.field-meta.xml
<CustomField>
    <fullName>ADMINISTERING_ACTIVITY__c</fullName>
    <description>ADMINISTERING_ACTIVITY</description>
    <externalDeveloperName>ADMINISTERING_ACTIVITY</externalDeveloperName>
    <label>ADMINISTERING_ACTIVITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>