force-app/main/default/objects/Forrester_Sponsor__x/fields/CONTACT_RECID__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_RECID__c</fullName>
    <description>CONTACT_RECID</description>
    <externalDeveloperName>CONTACT_RECID</externalDeveloperName>
    <label>CONTACT_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>