force-app/main/default/objects/Forrester_Sponsor__x/fields/CONTRACT_SPONSOR_NUM__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_SPONSOR_NUM__c</fullName>
    <description>CONTRACT_SPONSOR_NUM</description>
    <externalDeveloperName>CONTRACT_SPONSOR_NUM</externalDeveloperName>
    <label>CONTRACT_SPONSOR_NUM</label>
    <length>24</length>
    <type>Text</type>
</CustomField>