force-app/main/default/objects/Forrester_Sponsor__x/fields/COUNTRY_CODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_CODE__c</fullName>
    <description>COUNTRY_CODE</description>
    <externalDeveloperName>COUNTRY_CODE</externalDeveloperName>
    <label>COUNTRY_CODE</label>
    <length>3</length>
    <type>Text</type>
</CustomField>