force-app/main/default/objects/Forrester_Sponsor__x/fields/EDISON_SPONSOR_NAME__c.field-meta.xml
<CustomField>
    <fullName>EDISON_SPONSOR_NAME__c</fullName>
    <description>EDISON_SPONSOR_NAME</description>
    <externalDeveloperName>EDISON_SPONSOR_NAME</externalDeveloperName>
    <label>EDISON_SPONSOR_NAME</label>
    <length>60</length>
    <type>Text</type>
</CustomField>