force-app/main/default/objects/Forrester_Sponsor__x/fields/GOVERNMENT_COMPLIANCE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>GOVERNMENT_COMPLIANCE_FLAG__c</fullName>
    <description>GOVERNMENT_COMPLIANCE_FLAG</description>
    <externalDeveloperName>GOVERNMENT_COMPLIANCE_FLAG</externalDeveloperName>
    <label>GOVERNMENT_COMPLIANCE_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>