force-app/main/default/objects/Forrester_Sponsor__x/fields/SAP_SPONSOR_NUM__c.field-meta.xml
<CustomField>
    <fullName>SAP_SPONSOR_NUM__c</fullName>
    <description>SAP_SPONSOR_NUM</description>
    <externalDeveloperName>SAP_SPONSOR_NUM</externalDeveloperName>
    <label>SAP_SPONSOR_NUM</label>
    <length>24</length>
    <type>Text</type>
</CustomField>