force-app/main/default/objects/Forrester_Sponsor__x/fields/SPONSOR_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_CATEGORY__c</fullName>
    <description>SPONSOR_CATEGORY</description>
    <externalDeveloperName>SPONSOR_CATEGORY</externalDeveloperName>
    <label>SPONSOR_CATEGORY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>