force-app/main/default/objects/Forrester_Sponsor__x/fields/SPONSOR_NAME__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_NAME__c</fullName>
    <description>SPONSOR_NAME</description>
    <externalDeveloperName>SPONSOR_NAME</externalDeveloperName>
    <label>SPONSOR_NAME</label>
    <length>60</length>
    <type>Text</type>
</CustomField>