force-app/main/default/objects/Forrester_Sponsor__x/fields/SPONSOR_RECID__c.field-meta.xml
<CustomField>
    <fullName>SPONSOR_RECID__c</fullName>
    <description>SPONSOR_RECID</description>
    <externalDeveloperName>SPONSOR_RECID</externalDeveloperName>
    <label>Sponsor</label>
    <length>24</length>
    <type>Text</type>
</CustomField>