force-app/main/default/objects/Forrester_Sponsor__x/fields/USE_COMPLIANCE_DEFAULT_FLAG__c.field-meta.xml
<CustomField>
    <fullName>USE_COMPLIANCE_DEFAULT_FLAG__c</fullName>
    <description>USE_COMPLIANCE_DEFAULT_FLAG</description>
    <externalDeveloperName>USE_COMPLIANCE_DEFAULT_FLAG</externalDeveloperName>
    <label>USE_COMPLIANCE_DEFAULT_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>