force-app/main/default/objects/Forrester_Sponsor__x/fields/WYLIE_CASE_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>WYLIE_CASE_SUFFIX__c</fullName>
    <description>WYLIE_CASE_SUFFIX</description>
    <externalDeveloperName>WYLIE_CASE_SUFFIX</externalDeveloperName>
    <label>WYLIE_CASE_SUFFIX</label>
    <length>1</length>
    <type>Text</type>
</CustomField>